# ideal-spork

./: README.md  ideal_spork-0.1.0-py3-none-any.whl  pyproject.toml
.github/workflows/: main.yml
ideal_spork/: __main__.py
ideal_spork/data/: __init__.py  db.py
ideal_spork/domain/todo/: __init__.py  todo_aggregate.py  todo_repo.py  todo_repository.py  todo_service.py
src/: main.py
src/data/: db.py
src/domain/todo/: todo_class.py  todo_repo.py
