[tool.poetry]
name = "ideal-spork"
version = "0.1.0"
description = ""
authors = ["yarabramasta <yarabram111@gmail.com>"]
readme = "README.md"
packages = [{include = "ideal_spork"}]

[tool.poetry.dependencies]
python = "^3.10"
pysqlite3 = "^0.4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
