[tool.poetry]
name = "ideal_spork"
version = "0.1.0"
description = ""
authors = ["yarabramasta <yarabram111@gmail.com>"]
readme = "README.md"
packages = [{include = "ideal_spork"}]

[tool.poetry.dependencies]
python = "^3.10"
pysqlite3 = "^0.4.8"

[tool.poetry.scripts]
ideal_spork = "ideal_spork.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
